<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.join.ws.ui.WebServerEnter" >

    <LinearLayout
        android:id="@+id/url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <CheckBox 
            android:id="@+id/share_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wlan_type"
            />
        <Button
            android:id="@+id/app_self_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_self_share"
            android:textSize="20sp" />

        <Button
            android:id="@+id/all_apps_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/all_apps_share"
            android:textSize="20sp" />

        <Button
            android:id="@+id/web_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/websettings"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>