<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.android.phoneassistant.view.CustomTextView
        android:id="@+id/version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.android.phoneassistant.view.CustomTextView
        android:id="@+id/release_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/release_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.android.phoneassistant.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <com.android.phoneassistant.view.CustomTextView
            android:id="@+id/version_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:maxHeight="48dp"
            android:minHeight="48dp"
            android:progressDrawable="@drawable/progress_horizontal" />

        <Button
            android:id="@+id/upgrade_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/upgrade_button"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>