<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.android.phoneassistant.view.CustomButton
            android:id="@+id/export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/export" />

        <com.android.phoneassistant.view.CustomButton
            android:id="@+id/import_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_" />
    </LinearLayout>

    <com.android.phoneassistant.view.CustomButton
        android:id="@+id/delete_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_delete" />

<!--     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.android.phoneassistant.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_file_tip"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp" />
    </RelativeLayout> -->
    <include layout="@android:layout/simple_list_item_multiple_choice"/>
    <ListView
        android:id="@+id/export_file_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

</LinearLayout>