<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:box="http://schemas.android.com/apk/res/com.android.phoneassistant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="afterDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants" >

        <LinearLayout
            android:id="@+id/dial_number"
            android:layout_width="@dimen/listview_item_height"
            android:layout_height="@dimen/listview_item_height"
            android:layout_weight="0"
            android:background="@drawable/item_background"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/dial_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dial_number" />
        </LinearLayout>

        <View style="@style/vertical_line" />

        <LinearLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingLeft="5dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/attribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/app_name"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@+id/attribution"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/display_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:ellipsize="marquee"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/call_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/call_log_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/vertical_line" />

        <RelativeLayout
            android:layout_width="@dimen/listview_item_height"
            android:layout_height="@dimen/listview_item_height"
            android:layout_weight="0"
            android:clickable="true" >

            <com.android.phoneassistant.view.CustomCheckBox
                android:id="@+id/delete_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_background"
                android:clickable="true"
                android:gravity="center" />

            <com.android.phoneassistant.view.CustomCheckBox
                android:id="@+id/function_menu"
                android:layout_width="@dimen/listview_item_height"
                android:layout_height="@dimen/listview_item_height"
                android:background="@drawable/item_background"
                box:button="@drawable/menu_more_selector"
                android:clickable="true"
                android:gravity="center" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_function"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/frame_drawable"
        android:orientation="horizontal"
        android:visibility="visible" >

        <com.android.phoneassistant.view.CustomCheckBox
            android:id="@+id/black_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/item_background"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            box:text="@string/black_name"
            box:button="@drawable/black_btn_check"
            android:gravity="center" />
        <View style="@style/vertical_line" />
        <com.android.phoneassistant.view.CustomCheckBox
            android:id="@+id/send_sms"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/item_background"
            android:clickable="true"
            box:text="@string/send_sms"
            box:button="@drawable/sms"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center" />
        <View style="@style/vertical_line" />
        <com.android.phoneassistant.view.CustomCheckBox
            android:id="@+id/delete_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/item_background"
            android:clickable="true"
            box:text="@string/action_delete"
            box:button="@drawable/delete_file"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>